# aoc2024

./: .gitignore  Cargo.toml
day01/: main.rs
day02/: main.rs
day03/: main.rs
