[package]
name = "aoc2024"
authors = ["@makstamoian Maks Tamoian"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day01"
path = "day01/main.rs"

[[bin]]
name = "day02"
path = "day02/main.rs"

[[bin]]
name = "day03"
path = "day03/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.1"
